tests/typing/fail/empty_return_non_void_function.crs
fn test() i32 {
    return;
}